[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vnstock"
version = "1.0.0"
description = "Vnstock with Auto Rate-Limit Bypass and Sponsor Features"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.3",
    "vnai>=2.0",
    "fake-useragent>=1.5.1",
    "cryptography>=42.0.5",
    "psutil>=6.0.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.2",
    "vnstock-ezchart>=0.0.2",
    "PySocks>=1.7.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vnstock*"]
